apps/base/fileflows/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fileflows
  labels:
    app.kubernetes.io/name: fileflows
    app.kubernetes.io/instance: fileflows
spec:
  selector:
    app.kubernetes.io/name: fileflows
    app.kubernetes.io/instance: fileflows
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
