apps/base/fileflows/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileflows
spec:
  ingressClassName: traefik
  rules:
    - host: fileflows.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fileflows
                port:
                  name: http
