apps/base/fileflows/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fileflows-route
  namespace: fileflows
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - fileflows.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: fileflows
          port: 5000
